<resources>
    <string name="app_name">Events</string>

    <string name="title">Judul</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>

    <string name="title_appbar_upcoming">Upcoming Event</string>
    <string name="title_appbar_finished">Finished Event</string>
    <string name="title_appbar_favorite">Favorite Event</string>
    <string name="title_appbar_settings">Settings</string>

    <string name="no_event_now">Event tidak tersedia saat ini</string>
    <string name="event_summary">Ringkasan</string>
    <string name="event_description">Lorem Ipsum is not simply random text.
        It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
        looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
        and going through the cites of the word in classical literature, discovered the undoubtable source.
        Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum"
        (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet.."
    </string>
    <string name="event_quota">Quota peserta</string>
    <string name="event_quota_nominal">1500</string>
    <string name="event_registrants">Peserta terdaftar</string>
    <string name="event_registrants_nominal">1500</string>
    <string name="event_owner">Owner</string>
    <string name="event_begin_time">23 Jan 2025</string>
    <string name="btn_register">Register Now</string>
    <string name="title_heading_upcoming">Upcoming Event</string>
    <string name="title_heading_finished">Finished Event</string>
    <string name="hint_search">Cari event…</string>
    <string name="title_no_result">Event tidak ditemukan</string>
    <string name="read_more">Read More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favorite_button">favorite</string>
    <string name="mode_switch">Dark Mode</string>
    <string name="reminder_switch">Daily Reminder</string>
    <string name="settings_button">Settings</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="enable_notification">Enable notification</string>
    <string name="finished_event">Finished Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="no_event_favorite">Event favorite belum ditambahkan</string>
    <string name="logo">logo</string>

    <string name="owner_event">Diselenggarakan oleh : %1$s.</string>
    <string name="quota_peserta">Quota peserta : %1$s</string>
    <string name="sisa_quota">Sisa Quota : %1$s</string>
    <string name="acara_terbuka">Acara Terbuka Hingga : %1$s</string>

</resources>