<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ndridm.eventsdicodingapp.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_event_upcoming"
        android:name="com.ndridm.eventsdicodingapp.view.upcoming.UpcomingFragment"
        android:label="@string/title_appbar_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_event_finished"
        android:name="com.ndridm.eventsdicodingapp.view.finished.FinishedFragment"
        android:label="@string/title_appbar_finished"
        tools:layout="@layout/fragment_finished" />
</navigation>